...
  }, []);

  const styles = createStyles(colors);
  return (
    <View style={styles.container}>
      <Text accessibilityRole="header" style={styles.title}>
        7-day Forecast
      </Text>
      <FlashList
        data={data}
        keyExtractor={(it) => it.day}
        renderItem={({ item }) => <ForecastRowItem item={item} styles={styles} />}
        getItemType={() => 'forecast-row'}
...
